--- a/style.css
+++ b/style.css
@@ -12,7 +12,17 @@ h1 {
   z-index: 10;
 }
 #graph-container {
+  display: flex;
+  flex-direction: column;
   /* margin-top: 1em; */
   width: 35em;
   height: 25em;
+}
+#molar-slider {
+  display: block;
+  width: 300px;
+}
+#temperature-slider {
+  display: block;
+  width: 300px;
 }
