--- a/style.css
+++ b/style.css
@@ -1,11 +1,18 @@
 body {
   padding: 1em;
 }
+.nav-bar {
+  /* padding: 1em; */
+}
 h1 {
   font-size: 1.5em;
+  margin-bottom: 1em;
+}
+.buttons-container {
+  margin-bottom: 2em;
 }
 .svg-plot {
-  margin-top: 10em;
+  margin-top: 17em;
 }
 #slider-container {
   /* margin-top: 1em; */
