--- a/style.css
+++ b/style.css
@@ -38,10 +38,13 @@ h1 {
 }
 .close-button {
   cursor: pointer;
-  display: flex;
-  align-self: flex-end;
+  position: absolute;
+  top: 10px; /* Adjust as needed */
+  right: 10px; /* Adjust as needed */
 }
 .modal {
+  /* display: flex;
+  flex-direction: column; */
   width: 50%;
   height: auto; /* Set height to auto for dynamic sizing based on content */
   padding: 1.5em;
